@@ -21,6 +21,7 @@ module Fairy
   CONF.N_MOD_GROUP_BY = 5
   CONF.HASH_MODULE = "share/hash-md5"
   CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
+  CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
 
   CONF.VF_ROOT = CONF.HOME+"/test/Repos"
   CONF.VF_PREFIX = `hostname`.chomp
