@@ -1,3 +1,8 @@
+Tue Feb 10 16:11:42 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* node/n-mod-group-by.rb, share/conf.rb, etc/fairy.conf: 
+	  CommandMergeSortBuffer追加
+
 Tue Feb 10 14:13:04 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* node/port.rb: 要素転送時にリファレンスを渡す機能を追加
